--- a/index.html
+++ b/index.html
@@ -12,61 +12,70 @@
             <a href="mailto:fajaralfian231@gmail.com" target="_blank" class="email">fajaralfian231@gmail.com</a>
         <h2 class="info">Fresh graduate from Singaperbangsa University majoring in Information System</h2>
         <h3>Summary</h3>
-            <p>Fresh graduate from Information System major, Faculty of Computer Science at Singaperbangsa Karawang University. 
+            <div class="pborder">
+                <p>Fresh graduate from Singaperbangsa Karawang University majoing in Information System. 
                 Highly interested and motivated in business and technology. Someone who has a leadership spirit and pursuit of excellence. 
                 Interested in working in the field of Frontend Development.</p>
+            </div>
         <h3>Education</h3>
-            <div class="education">
-                <span>UNIVERSITY OF SINGAPERBANGSA KARAWANG</span>
-                <span>(Aug 2020 - Nov 2024)</span>
+            <div class="pborder">
+                <div class="education">
+                    <span>UNIVERSITY OF SINGAPERBANGSA KARAWANG</span>
+                    <span>(Aug 2020 - Nov 2024)</span>
+                </div>
+                    <p>Bachelor’s Degree Information System</p>
+                    <p>GPA 3.80 of 4.00 </p>
+                    <p>Course : Software Engineering, Databases, SQL, SDLC, Web Based Programming, 
+                        Business Process Analysis, E-Business, System Analysis, Operating System, ERP.</p>
             </div>
-                <p>Bachelor’s Degree Information System</p>
-                <p>GPA 3.80 of 4.00 </p>
-                <p>Course : Software Engineering, Databases, SQL, SDLC, Web Based Programming, 
-                    Business Process Analysis, E-Business, System Analysis, Operating System, ERP.</p>
         <h3>Experience</h3>
-            <div class="experience">
-                <span>Web Development</span>
-                <span>(August - December 2023)</span>
+            <div class="pborder">
+                <div class="experience">
+                    <span>Web Development</span>
+                    <span>(August - December 2023)</span>
+                </div>
+                    <p>Infinite Learning MSIB Program</p>
+                        <ul>
+                            <li>Conducted UI/UX research and usability testing to improve web applications.</li>
+                            <li>Developed web applications using JavaScript, React, Node.js and REST API.</li>
+                            <li>Improved team collaboration, communication, and adaptability in real-world projects</li>
+                            <li>Able to create project plans on a small to medium scale.</li>
+                        </ul>
+                <div class="experience">
+                    <span>Fullstack Web Development</span>
+                    <span>(June 2022 - February 2023)</span>
+                </div>
+                    <p>Arkatama MSIB Program</p>
+                        <ul>
+                            <li>Developed a marketplace website following best coding practices.</li>
+                            <li>Implementing User Interface </li>
+                            <li>Reported and debugged issues to enhance system performance.</li>
+                            <li>Writing Code with Principles according to Guidelines and Best Practices.</li>
+                        </ul>
             </div>
-                <p>Infinite Learning MSIB Program</p>
-                    <ul>
-                        <li>Conducted UI/UX research and usability testing to improve web applications.</li>
-                        <li>Developed web applications using JavaScript, React, Node.js and REST API.</li>
-                        <li>Improved team collaboration, communication, and adaptability in real-world projects</li>
-                        <li>Able to create project plans on a small to medium scale.</li>
-                    </ul>
-            <div class="experience">
-                <span>Fullstack Web Development</span>
-                <span>(June 2022 - February 2023)</span>
-            </div>
-                <p>Arkatama MSIB Program</p>
-                    <ul>
-                        <li>Developed a marketplace website following best coding practices.</li>
-                        <li>Implementing User Interface </li>
-                        <li>Reported and debugged issues to enhance system performance.</li>
-                        <li>Writing Code with Principles according to Guidelines and Best Practices.</li>
-                    </ul>
         <h3>Certification</h3>
-            <div class="certification">
-                <span>Web Development</span>
-                <span>(December 2023)</span>
+            <div class="pborder">
+                <div class="certification">
+                    <span>Web Development</span>
+                    <span>(December 2023)</span>
+                </div>
+                    <p>ID Number : 758/IL-SIB/I/2024</p>
+                    <p>Infinite Learning </p>
+                <div class="certification">
+                    <span>Junior Web Developer</span>
+                    <span>(February 2023)</span>
+                </div>
+                    <p>ID Number : 10778256</p>
+                    <p>Badan Nasional Sertifikasi Profesi (BNSP) </p>
+                <div class="certification">
+                    <span>Fullstack Web Development</span>
+                    <span>(February 2023)</span>
+                </div>
+                    <p>ID Number : AMS/B-378/Sert/XII/2022</p>
+                    <p>Arkatama </p>
             </div>
-                <p>ID Number : 758/IL-SIB/I/2024</p>
-                <p>Infinite Learning </p>
-            <div class="certification">
-                <span>Junior Web Developer</span>
-                <span>(February 2023)</span>
-            </div>
-                <p>ID Number : 10778256</p>
-                <p>Badan Nasional Sertifikasi Profesi (BNSP) </p>
-            <div class="certification">
-                <span>Fullstack Web Development</span>
-                <span>(February 2023)</span>
-            </div>
-                <p>ID Number : AMS/B-378/Sert/XII/2022</p>
-                <p>Arkatama </p>
         <h3>Skills</h3>
+        <div class="pborder">
             <p class="skills">Technical Skills</p>
                 <ul>
                     <li><strong>Programming Language: </strong>JavaScript, Python, C#, .Net</li>
@@ -76,6 +85,7 @@
                 </ul>
             <p class="skills">Soft Skills:</p>
             <p>Analytical skill, Management Project, Leadership skill, Interpersonal skill, Critical Thinking, Problem-Solving, and Time Management.</p>
+        </div>
     </main>
 </body>
 <hr>
